<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PickImageFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/labelPickImage"
        style="?textAppearanceBodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hint_pick_image"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/camera"
        app:icon="@drawable/photo_camera_filled_24dp"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonGallery"
        app:layout_constraintTop_toBottomOf="@+id/labelPickImage" />

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gallery"
        app:icon="@drawable/photo_library_filled_24dp"
        app:iconGravity="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCamera"
        app:layout_constraintEnd_toStartOf="@+id/buttonCamera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/hint_pick_image"
        android:src="@drawable/image_filled_24dp"
        android:tintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/labelPickImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@color/md_theme_dark_onPrimaryContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>